<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corners_5"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_title"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_text_content"
        android:textSize="14sp"
        android:textColor="@color/gray"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/dialog_text_cancel"
            android:background="@drawable/bg_white_selector_bottom_left_corners_5"
            />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/line"
            />
        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/dialog_text_confirm"
            android:background="@drawable/bg_white_selector_bottom_right_corners_5"
            />
    </LinearLayout>
</LinearLayout>