<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/albums"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/dialog_text_from_album_select"
        android:gravity="center"
        android:background="@drawable/bg_white_selector_top_corners_5"
        />
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/albums"
        android:background="@color/line"
        />
    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line"
        android:clickable="true"
        android:focusable="true"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/dialog_text_photograph"
        android:gravity="center"
        android:background="@drawable/bg_white_selector_bottom_corners_5"
        />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/camera"
        android:clickable="true"
        android:focusable="true"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/dialog_text_cancel"
        android:gravity="center"
        android:background="@drawable/bg_white_selector_corners_5"
        />
</RelativeLayout>