<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#393a3f"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:id="@+id/albums_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:background="@drawable/bg_translucent_selector"
                    />
                <View
                    android:layout_width="1px"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#302f34"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/albums_browser_text_title"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/albums_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/albums_browser_text_finish"
                android:textSize="14sp"
                android:textColor="@drawable/bg_color"
                android:background="@drawable/bg_button"
                />
        </RelativeLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/albums_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="4"
        android:verticalSpacing="3dp"
        android:horizontalSpacing="3dp"
        android:fadingEdge="none"
        android:overScrollMode="never"
        />
    <RelativeLayout
        android:id="@+id/albums_navigation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:background="#393a3f"
        >
        <LinearLayout
            android:id="@+id/albums_popup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:background="@drawable/bg_translucent_selector"
            >
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/albums_browser_text_all"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_down"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/albums_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:background="@drawable/bg_translucent_selector"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/albums_browser_text_preview"
            android:textColor="@drawable/bg_color"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>